@@ -1,20 +1,47 @@
+/**
+ * \file xvidcap-dbus-client.c
+ *
+ * This file contains a command line application for remote controlling
+ * xvidcap itself through dbus remote function calls.
+ *
+ */
+
+/*
+ * Copyright (C) 2004-07 Karl, Frankfurt
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif     // HAVE_CONFIG_H
+#endif     // DOXYGEN_SHOULD_SKIP_THIS
+
 #include <getopt.h>
 #include <stdlib.h>
 #include <stdio.h>
 #include <strings.h>
-
-#ifndef DOXYGEN_SHOULD_SKIP_THIS
-#ifdef HAVE_CONFIG_H
-//#include <config.h>
-#include "../config.h"
-#endif     // HAVE_CONFIG_H
-#endif     // DOXYGEN_SHOULD_SKIP_THIS
-
 #include <dbus/dbus-glib-bindings.h>
 
 #include "xvidcap-client-bindings.h"
 #include "xvidcap-intl.h"
 
+/**
+ * \brief enumeration of types of actions supported to be used in a switch
+ */
 enum ACTION_TYPES
 {
     ACTION_START,
@@ -22,6 +49,11 @@ enum ACTION_TYPES
     ACTION_PAUSE
 };
 
+/**
+ * \brief displays command line usage
+ *
+ * @param prog a string containing the name of the program
+ */
 void
 usage (char *prog)
 {
@@ -33,9 +65,16 @@ usage (char *prog)
     exit (1);
 }
 
+/**
+ * \brief main function of the application to do the remote function invocation
+ *
+ * @return completion status 
+ */
+
 int
 main (int argc, char *argv[])
 {
+    // there's one one argument supported
     struct option options[] = {
         {"action", required_argument, NULL, 0}
     };
@@ -65,7 +104,6 @@ main (int argc, char *argv[])
     if (action < 0) {
         usage (argv[0]);
     }
-// Somewhere in the code, we want to execute EchoString remote method 
 
     g_type_init ();
 
@@ -75,7 +113,7 @@ main (int argc, char *argv[])
         g_error_free (error);
         // Basically here, there is a problem, since there is no dbus :) 
     }
-// This won't trigger activation! 
+    // This won't trigger activation! 
     proxy = dbus_g_proxy_new_for_name (connection,
                                        "net.jarre_de_the.Xvidcap",
                                        "/net/jarre_de_the/Xvidcap",
@@ -85,30 +123,34 @@ main (int argc, char *argv[])
     case ACTION_START:
 
         if (!net_jarre_de_the_Xvidcap_start (proxy, &error)) {
-            g_warning ("Woops remote method failed: %s", error->message);
+            g_warning (_("Could not send start command to xvidcap: %s"),
+                       error->message);
             g_error_free (error);
         }
         break;
     case ACTION_STOP:
 
         if (!net_jarre_de_the_Xvidcap_stop (proxy, &error)) {
-            g_warning ("Woops remote method failed: %s", error->message);
+            g_warning (_("Could not send stop command to xvidcap: %s"),
+                       error->message);
             g_error_free (error);
         }
         break;
     case ACTION_PAUSE:
 
         if (!net_jarre_de_the_Xvidcap_pause (proxy, &error)) {
-            g_warning ("Woops remote method failed: %s", error->message);
+            g_warning (_("Could not pause/unpause xvidcap: %s"),
+                       error->message);
             g_error_free (error);
         }
         break;
     }
 
-// Cleanup 
+    // Cleanup 
     g_object_unref (proxy);
 
-// The DBusGConnection should never be unreffed, it lives once and is shared amongst the process 
+    // The DBusGConnection should never be unreffed, it lives once and is 
+    // shared amongst the process 
 
     return 0;
 }
